--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "src/layouts/Layout.astro";
+import Header from "../components/Header.astro";
 import HeroSection from "../components/HeroSection.astro";
 import AboutMeSection from "../components/AboutMeSection.astro";
 import BlogPostsSection from "../components/BlogPostsSection.astro";
@@ -10,6 +11,7 @@ import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Ben Limmer" description="Ben Limmer's personal website">
+  <Header />
   <HeroSection />
   <AboutMeSection />
   <BlogPostsSection />
