--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "src/layouts/Layout.astro";
-import Header from "../components/Header.astro";
-import HeroSection from "../components/HeroSection.astro";
-import AboutMeSection from "../components/AboutMeSection.astro";
-import BlogPostsSection from "../components/BlogPostsSection.astro";
-import ContactSection from "../components/ContactSection.astro";
-import Footer from "../components/Footer.astro";
+import Header from "src/components/Header.astro";
+import HeroSection from "src/components/HeroSection.astro";
+import AboutMeSection from "src/components/AboutMeSection.astro";
+import BlogPostsSection from "src/components/BlogPostsSection.astro";
+import ContactSection from "src/components/ContactSection.astro";
+import Footer from "src/components/Footer.astro";
 ---
 
 <Layout title="Ben Limmer" description="Ben Limmer's personal website">
