--- a/src/components/BaseSection.astro
+++ b/src/components/BaseSection.astro
@@ -9,8 +9,8 @@ interface Props {
 const { id, title, description, children } = Astro.props;
 ---
 
-<section class="bg-primary text-white py-20 flex flex-col items-center" id={id}>
-  {title && <h2 class="text-3xl md:text-4xl font-bold mb-4 text-blue-300">{title}</h2>}
-  {description && <p class="text-center max-w-2xl mb-10 text-white/80">{description}</p>}
+<section class="bg-primary flex flex-col items-center py-20 text-white" id={id}>
+  {title && <h2 class="mb-4 text-3xl font-bold text-blue-300 md:text-4xl">{title}</h2>}
+  {description && <p class="mb-10 max-w-2xl text-center text-white/80">{description}</p>}
   <slot />
 </section>
