--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="bg-secondary text-white/60 py-6 text-xs flex flex-col items-center justify-center px-4 border-t border-white/10"
+  class="bg-secondary flex flex-col items-center justify-center border-t border-white/10 px-4 py-6 text-xs text-white/60"
 >
   <div class="flex items-center gap-2">
     <span>© {currentYear} Ben Limmer. All rights reserved.</span>
