--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Header from "src/components/Header.astro";
 import Footer from "src/components/Footer.astro";
 ---
 
-<Layout title="Ben Limmer" description="">
+<Layout title={["About"]} description="">
   <Header />
   <Footer />
 </Layout>
