--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ContactSection from "src/components/homepage/ContactSection.astro";
 import Footer from "src/components/Footer.astro";
 ---
 
-<Layout title="Ben Limmer" description="Ben Limmer's personal website">
+<Layout description="Ben Limmer's personal website">
   <Header />
   <HeroSection />
   <BlogPostsSection />
