fix: push footer to the bottom

--- a/src/pages/freelance/index.astro
+++ b/src/pages/freelance/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "src/layouts/Layout.astro";
-import Header from "src/components/Header.astro";
-import Footer from "src/components/Footer.astro";
 ---
 
-<Layout title={["Freelance"]} description="">
-  <Header />
-  <Footer />
-</Layout>
+<Layout
+  title={["Freelance"]}
+  description="Ben Limmer's freelance software engineering and consulting services. Specializing in developer experience and productivity improvements."
+/>
