--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,21 @@
 ---
 import Layout from "src/layouts/Layout.astro";
-import Header from "src/components/Header.astro";
+import { Image } from "astro:assets";
+import headshot from "src/assets/headshot.png";
+import { getCollection } from "astro:content";
 import HeroSection from "src/components/homepage/HeroSection.astro";
 import BlogPostsSection from "src/components/homepage/BlogPostsSection.astro";
 import ContactSection from "src/components/homepage/ContactSection.astro";
 import Footer from "src/components/Footer.astro";
 ---
 
-<Layout description="Ben Limmer's personal website">
-  <Header />
-  <HeroSection />
-  <BlogPostsSection />
-  <ContactSection />
+<Layout
+  description="Ben Limmer is a freelance software engineer and architect based in Denver, Colorado. He specializes in improving developer experience and productivity."
+>
+  <main>
+    <HeroSection />
+    <BlogPostsSection />
+    <ContactSection />
+  </main>
   <Footer />
 </Layout>
