--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Head from "src/components/Head.astro";
+import Header from "src/components/Header.astro";
+import Footer from "src/components/Footer.astro";
 
 interface Props {
   title?: string[];
@@ -11,13 +13,15 @@ const titleString = [...title, "Ben Limmer"].join(" | ");
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <Head title={titleString} description={description} />
   </head>
-  <body>
-    <main>
+  <body class="flex min-h-full flex-col">
+    <Header />
+    <div class="flex-1">
       <slot />
-    </main>
+    </div>
+    <Footer />
   </body>
 </html>
