--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from "src/layouts/Layout.astro";
-import Header from "src/components/Header.astro";
-import Footer from "src/components/Footer.astro";
+import { getCollection } from "astro:content";
 ---
 
-<Layout title="Ben Limmer" description="">
-  <Header />
-  <Footer />
+<Layout
+  title={["Blog"]}
+  description="Ben Limmer's blog posts about software engineering, developer experience, and technical leadership."
+>
+  <main>// ... existing code ...</main>
 </Layout>
