--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "src/layouts/Layout.astro";
-import Header from "src/components/Header.astro";
-import Footer from "src/components/Footer.astro";
 ---
 
-<Layout title={["Portfolio"]} description="">
-  <Header />
-  <Footer />
-</Layout>
+<Layout
+  title={["Portfolio"]}
+  description="Ben Limmer's portfolio of software engineering projects and consulting work."
+/>
