more iteration on global prose styles

--- a/src/components/SectionHeading.astro
+++ b/src/components/SectionHeading.astro
@@ -6,4 +6,4 @@ interface Props {
 const { text } = Astro.props;
 ---
 
-<h2 class="mb-8 text-3xl font-bold text-gray-900 dark:text-gray-100">{text}</h2>
+<h2 class="mb-8 text-3xl font-bold text-white">{text}</h2>
